ASPCoreParser.py
# Generated from ASPCore.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ASPCoreParser ( Parser ):

    grammarFileName = "ASPCore.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'not'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'_'", "'.'", "','", "'?'", "':'", "';'", 
                     "'|'", "':-'", "':~'", "'+'", "'-'", "'*'", "'/'", 
                     "'@'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'#count'", "'#max'", 
                     "'#min'", "'#sum'", "'#minimize'", "'#maximize'" ]

    symbolicNames = [ "<INVALID>", "NAF", "ID", "VARIABLE", "STRING", "NUMBER", 
                      "ANONYMOUS_VARIABLE", "DOT", "COMMA", "QUERY_MARK", 
                      "COLON", "SEMICOLON", "OR", "CONS", "WCONS", "PLUS", 
                      "MINUS", "TIMES", "DIV", "AT", "PAREN_OPEN", "PAREN_CLOSE", 
                      "SQUARE_OPEN", "SQUARE_CLOSE", "CURLY_OPEN", "CURLY_CLOSE", 
                      "EQUAL", "UNEQUAL", "LESS", "GREATER", "LESS_OR_EQ", 
                      "GREATER_OR_EQ", "COUNT", "MAX", "MIN", "SUM", "MINIMIZE", 
                      "MAXIMIZE", "COMMENT", "MULTI_LINE_COMMENT", "BLANK" ]

    RULE_program = 0
    RULE_statements = 1
    RULE_query = 2
    RULE_statement = 3
    RULE_head = 4
    RULE_body = 5
    RULE_disjunction = 6
    RULE_choice = 7
    RULE_choice_elements = 8
    RULE_choice_element = 9
    RULE_aggregate = 10
    RULE_aggregate_elements = 11
    RULE_aggregate_element = 12
    RULE_aggregate_function = 13
    RULE_optimize = 14
    RULE_optimize_elements = 15
    RULE_optimize_element = 16
    RULE_optimize_function = 17
    RULE_weight_at_level = 18
    RULE_naf_literals = 19
    RULE_naf_literal = 20
    RULE_classical_literal = 21
    RULE_builtin_atom = 22
    RULE_compop = 23
    RULE_terms = 24
    RULE_term = 25
    RULE_func_term = 26
    RULE_arith_term = 27
    RULE_arith_sum = 28
    RULE_arith_prod = 29
    RULE_arith_atom = 30

    ruleNames =  [ "program", "statements", "query", "statement", "head", 
                   "body", "disjunction", "choice", "choice_elements", "choice_element", 
                   "aggregate", "aggregate_elements", "aggregate_element", 
                   "aggregate_function", "optimize", "optimize_elements", 
                   "optimize_element", "optimize_function", "weight_at_level", 
                   "naf_literals", "naf_literal", "classical_literal", "builtin_atom", 
                   "compop", "terms", "term", "func_term", "arith_term", 
                   "arith_sum", "arith_prod", "arith_atom" ]

    EOF = Token.EOF
    NAF=1
    ID=2
    VARIABLE=3
    STRING=4
    NUMBER=5
    ANONYMOUS_VARIABLE=6
    DOT=7
    COMMA=8
    QUERY_MARK=9
    COLON=10
    SEMICOLON=11
    OR=12
    CONS=13
    WCONS=14
    PLUS=15
    MINUS=16
    TIMES=17
    DIV=18
    AT=19
    PAREN_OPEN=20
    PAREN_CLOSE=21
    SQUARE_OPEN=22
    SQUARE_CLOSE=23
    CURLY_OPEN=24
    CURLY_CLOSE=25
    EQUAL=26
    UNEQUAL=27
    LESS=28
    GREATER=29
    LESS_OR_EQ=30
    GREATER_OR_EQ=31
    COUNT=32
    MAX=33
    MIN=34
    SUM=35
    MINIMIZE=36
    MAXIMIZE=37
    COMMENT=38
    MULTI_LINE_COMMENT=39
    BLANK=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ASPCoreParser.EOF, 0)

        def statements(self):
            return self.getTypedRuleContext(ASPCoreParser.StatementsContext,0)


        def query(self):
            return self.getTypedRuleContext(ASPCoreParser.QueryContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ASPCoreParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 62
                self.statements()


            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==16:
                self.state = 65
                self.query()


            self.state = 68
            self.match(ASPCoreParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPCoreParser.StatementContext)
            else:
                return self.getTypedRuleContext(ASPCoreParser.StatementContext,i)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = ASPCoreParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 70
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 73 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classical_literal(self):
            return self.getTypedRuleContext(ASPCoreParser.Classical_literalContext,0)


        def QUERY_MARK(self):
            return self.getToken(ASPCoreParser.QUERY_MARK, 0)

        def getRuleIndex(self):
            return ASPCoreParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = ASPCoreParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.classical_literal()
            self.state = 76
            self.match(ASPCoreParser.QUERY_MARK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONS(self):
            return self.getToken(ASPCoreParser.CONS, 0)

        def DOT(self):
            return self.getToken(ASPCoreParser.DOT, 0)

        def body(self):
            return self.getTypedRuleContext(ASPCoreParser.BodyContext,0)


        def head(self):
            return self.getTypedRuleContext(ASPCoreParser.HeadContext,0)


        def WCONS(self):
            return self.getToken(ASPCoreParser.WCONS, 0)

        def SQUARE_OPEN(self):
            return self.getToken(ASPCoreParser.SQUARE_OPEN, 0)

        def weight_at_level(self):
            return self.getTypedRuleContext(ASPCoreParser.Weight_at_levelContext,0)


        def SQUARE_CLOSE(self):
            return self.getToken(ASPCoreParser.SQUARE_CLOSE, 0)

        def optimize(self):
            return self.getTypedRuleContext(ASPCoreParser.OptimizeContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ASPCoreParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(ASPCoreParser.CONS)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 64425656446) != 0:
                    self.state = 79
                    self.body()


                self.state = 82
                self.match(ASPCoreParser.DOT)
                pass
            elif token in [2, 3, 4, 5, 6, 15, 16, 20, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.head()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 84
                    self.match(ASPCoreParser.CONS)
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if ((_la) & ~0x3f) == 0 and ((1 << _la) & 64425656446) != 0:
                        self.state = 85
                        self.body()




                self.state = 90
                self.match(ASPCoreParser.DOT)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(ASPCoreParser.WCONS)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 64425656446) != 0:
                    self.state = 93
                    self.body()


                self.state = 96
                self.match(ASPCoreParser.DOT)
                self.state = 97
                self.match(ASPCoreParser.SQUARE_OPEN)
                self.state = 98
                self.weight_at_level()
                self.state = 99
                self.match(ASPCoreParser.SQUARE_CLOSE)
                pass
            elif token in [36, 37]:
                self.enterOuterAlt(localctx, 4)
                self.state = 101
                self.optimize()
                self.state = 102
                self.match(ASPCoreParser.DOT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def disjunction(self):
            return self.getTypedRuleContext(ASPCoreParser.DisjunctionContext,0)


        def choice(self):
            return self.getTypedRuleContext(ASPCoreParser.ChoiceContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_head

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHead" ):
                return visitor.visitHead(self)
            else:
                return visitor.visitChildren(self)




    def head(self):

        localctx = ASPCoreParser.HeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_head)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.disjunction()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.choice()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def naf_literal(self):
            return self.getTypedRuleContext(ASPCoreParser.Naf_literalContext,0)


        def aggregate(self):
            return self.getTypedRuleContext(ASPCoreParser.AggregateContext,0)


        def COMMA(self):
            return self.getToken(ASPCoreParser.COMMA, 0)

        def body(self):
            return self.getTypedRuleContext(ASPCoreParser.BodyContext,0)


        def NAF(self):
            return self.getToken(ASPCoreParser.NAF, 0)

        def getRuleIndex(self):
            return ASPCoreParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = ASPCoreParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 110
                self.naf_literal()
                pass

            elif la_ == 2:
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 111
                    self.match(ASPCoreParser.NAF)


                self.state = 114
                self.aggregate()
                pass


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 117
                self.match(ASPCoreParser.COMMA)
                self.state = 118
                self.body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisjunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classical_literal(self):
            return self.getTypedRuleContext(ASPCoreParser.Classical_literalContext,0)


        def OR(self):
            return self.getToken(ASPCoreParser.OR, 0)

        def disjunction(self):
            return self.getTypedRuleContext(ASPCoreParser.DisjunctionContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_disjunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisjunction" ):
                return visitor.visitDisjunction(self)
            else:
                return visitor.visitChildren(self)




    def disjunction(self):

        localctx = ASPCoreParser.DisjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_disjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.classical_literal()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 122
                self.match(ASPCoreParser.OR)
                self.state = 123
                self.disjunction()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChoiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CURLY_OPEN(self):
            return self.getToken(ASPCoreParser.CURLY_OPEN, 0)

        def CURLY_CLOSE(self):
            return self.getToken(ASPCoreParser.CURLY_CLOSE, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPCoreParser.TermContext)
            else:
                return self.getTypedRuleContext(ASPCoreParser.TermContext,i)


        def compop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPCoreParser.CompopContext)
            else:
                return self.getTypedRuleContext(ASPCoreParser.CompopContext,i)


        def choice_elements(self):
            return self.getTypedRuleContext(ASPCoreParser.Choice_elementsContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_choice

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChoice" ):
                return visitor.visitChoice(self)
            else:
                return visitor.visitChildren(self)




    def choice(self):

        localctx = ASPCoreParser.ChoiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_choice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 1147004) != 0:
                self.state = 126
                self.term()
                self.state = 127
                self.compop()


            self.state = 131
            self.match(ASPCoreParser.CURLY_OPEN)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==16:
                self.state = 132
                self.choice_elements()


            self.state = 135
            self.match(ASPCoreParser.CURLY_CLOSE)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 4227858432) != 0:
                self.state = 136
                self.compop()
                self.state = 137
                self.term()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Choice_elementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def choice_element(self):
            return self.getTypedRuleContext(ASPCoreParser.Choice_elementContext,0)


        def SEMICOLON(self):
            return self.getToken(ASPCoreParser.SEMICOLON, 0)

        def choice_elements(self):
            return self.getTypedRuleContext(ASPCoreParser.Choice_elementsContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_choice_elements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChoice_elements" ):
                return visitor.visitChoice_elements(self)
            else:
                return visitor.visitChildren(self)




    def choice_elements(self):

        localctx = ASPCoreParser.Choice_elementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_choice_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.choice_element()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 142
                self.match(ASPCoreParser.SEMICOLON)
                self.state = 143
                self.choice_elements()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Choice_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classical_literal(self):
            return self.getTypedRuleContext(ASPCoreParser.Classical_literalContext,0)


        def COLON(self):
            return self.getToken(ASPCoreParser.COLON, 0)

        def naf_literals(self):
            return self.getTypedRuleContext(ASPCoreParser.Naf_literalsContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_choice_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChoice_element" ):
                return visitor.visitChoice_element(self)
            else:
                return visitor.visitChildren(self)




    def choice_element(self):

        localctx = ASPCoreParser.Choice_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_choice_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.classical_literal()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 147
                self.match(ASPCoreParser.COLON)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 1147006) != 0:
                    self.state = 148
                    self.naf_literals()




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AggregateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggregate_function(self):
            return self.getTypedRuleContext(ASPCoreParser.Aggregate_functionContext,0)


        def CURLY_OPEN(self):
            return self.getToken(ASPCoreParser.CURLY_OPEN, 0)

        def CURLY_CLOSE(self):
            return self.getToken(ASPCoreParser.CURLY_CLOSE, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPCoreParser.TermContext)
            else:
                return self.getTypedRuleContext(ASPCoreParser.TermContext,i)


        def compop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ASPCoreParser.CompopContext)
            else:
                return self.getTypedRuleContext(ASPCoreParser.CompopContext,i)


        def aggregate_elements(self):
            return self.getTypedRuleContext(ASPCoreParser.Aggregate_elementsContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_aggregate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregate" ):
                return visitor.visitAggregate(self)
            else:
                return visitor.visitChildren(self)




    def aggregate(self):

        localctx = ASPCoreParser.AggregateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_aggregate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 1147004) != 0:
                self.state = 153
                self.term()
                self.state = 154
                self.compop()


            self.state = 158
            self.aggregate_function()
            self.state = 159
            self.match(ASPCoreParser.CURLY_OPEN)
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 160
                self.aggregate_elements()


            self.state = 163
            self.match(ASPCoreParser.CURLY_CLOSE)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 4227858432) != 0:
                self.state = 164
                self.compop()
                self.state = 165
                self.term()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aggregate_elementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aggregate_element(self):
            return self.getTypedRuleContext(ASPCoreParser.Aggregate_elementContext,0)


        def SEMICOLON(self):
            return self.getToken(ASPCoreParser.SEMICOLON, 0)

        def aggregate_elements(self):
            return self.getTypedRuleContext(ASPCoreParser.Aggregate_elementsContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_aggregate_elements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregate_elements" ):
                return visitor.visitAggregate_elements(self)
            else:
                return visitor.visitChildren(self)




    def aggregate_elements(self):

        localctx = ASPCoreParser.Aggregate_elementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_aggregate_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.aggregate_element()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 170
                self.match(ASPCoreParser.SEMICOLON)
                self.state = 171
                self.aggregate_elements()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aggregate_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terms(self):
            return self.getTypedRuleContext(ASPCoreParser.TermsContext,0)


        def COLON(self):
            return self.getToken(ASPCoreParser.COLON, 0)

        def naf_literals(self):
            return self.getTypedRuleContext(ASPCoreParser.Naf_literalsContext,0)


        def getRuleIndex(self):
            return ASPCoreParser.RULE_aggregate_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregate_element" ):
                return visitor.visitAggregate_element(self)
            else:
                return visitor.visitChildren(self)




    def aggregate_element(self):

        localctx = ASPCoreParser.Aggregate_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_aggregate_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 1147004) != 0:
                self.state = 174
                self.terms()


            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 177
                self.match(ASPCoreParser.COLON)
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 1147006) != 0:
                    self.state = 178
                    self.naf_literals()




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aggregate_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(ASPCoreParser.COUNT, 0)

        def MAX(self):
            return self.getToken(ASPCoreParser.MAX, 0)

        def MIN(self):
            return self.getToken(ASPCoreParser.MIN, 0)

        def SUM(self):
            return self.getToken(ASPCoreParser.SUM, 0)

        def getRuleIndex(self):
            return ASPCoreParser.RULE_aggregate_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregate_function" ):
                return visitor.visitAggregate_function(self)
            else:
                return visitor.visitChildren(self)




    def aggregate_function(self):
